loads of small changes
mostly due to recommendations by FindBugs (findbugs.sourceforge.net)
plus some more that accumulated over time.


git-svn-id: svn+ssh://gate.spectrum.uni-bielefeld.de/homes/tbaumann/inpro-svnrepo/trunk@1027 19460358-522e-0410-942e-fdb976ae3ca2